assets/css/styles.css
body { 
    font-size: 16px;
    color: black;
    background: linear-gradient(to bottom, #ffccff 0%, #9966ff 100%);
    height: 800px;
    font-family: 'RocknRoll One', sans-serif;
}

/** Header **/ 
.navbar-brand {
   padding-top: 45px; 
   padding-bottom: 25px;
   padding-left: 25px;
}

.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}

.navbar-nav { 
    margin-left: auto; 
 } 

.custom-toggler.navbar-toggler { 
  border-color: black; 
} 
        
.custom-toggler .navbar-toggler-icon { 
 background-image: url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
} 
/** End header **/

/** Large devices only **/
@media (min-width: 1200px) {

.active a:hover {
    border-bottom: 1px solid balck;
}

.active {
  border-bottom: 1px solid black;
}
}

/** Medum devices only **/
@media (min-width: 992px) and (max-width: 1199px) {

.active a:hover {
    border-bottom: 1px solid balck;
}

.active {
  border-bottom: 1px solid black;
}
}

/** Small devices only **/
@media (min-width: 768px) and (max-width: 991px) {


}

/** Extra small devices only **/
@media (max-width: 767px) {

}

